--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Section</title>
+    <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
+
+    <title>Shifa Beauty</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <header class="header">
+        <div class="navbar">
+            <div class="logo">
+                <a href="index.html">Shifa Beauty</a>
+            </div>
+            <nav class="nav">
+                <ul>
+                    <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa-brands fa-servicestack"></i><a href="services.html">Services</a></li>
+                    <li><i class="fa-solid fa-address-card"></i><a href="collection.html">Collection</a></li>
+                    <li><i class="fa-solid fa-blog"></i><a href="blog.html">Blog</a></li>
+                    <li><i class="fa-solid fa-address-book"></i><a href="contact us.html">Contact Us</a></li>
+                </ul>
+            </nav>
+            <div class="header-right">
+                <a href="signup.html" class="cta-button">Sign Up</a>
+            </div>
+        </div>
+    </header>
+    
     <section class="blog">
         <div class="container">
             <h2 class="blog-title">Our Blog</h2>
