--- a/collection.html
+++ b/collection.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore Our Collection</title>
+    <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
+
+    <title>Shifa Beauty</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+     <header class="header">
+        <div class="navbar">
+            <div class="logo">
+                <a href="index.html">Shifa Beauty</a>
+            </div>
+            <nav class="nav">
+                <ul>
+                    <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa-brands fa-servicestack"></i><a href="services.html">Services</a></li>
+                    <li><i class="fa-solid fa-address-card"></i><a href="collection.html">Collection</a></li>
+                    <li><i class="fa-solid fa-blog"></i><a href="blog.html">Blog</a></li>
+                    <li><i class="fa-solid fa-address-book"></i><a href="contact us.html">Contact Us</a></li>
+                </ul>
+            </nav>
+            <div class="header-right">
+                <a href="signup.html" class="cta-button">Sign Up</a>
+            </div>
+        </div>
+    </header>
+
     <section class="collection">
         <div class="container">
             <h2 class="collection-title">Explore Our Collection</h2>
@@ -48,7 +71,65 @@
                     <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
                     <a href="#" class="view-details">View Details</a>
                 </div>
-                
+                <div class="collection-item">
+                    <img src="https://images.unsplash.com/photo-1617422275558-e5f616302690?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDZ8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Matte Naked 10 Colors Eyeshadow Palette</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://plus.unsplash.com/premium_photo-1677541367608-7283ec1b3a2b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDV8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Matte Naked 10 Colors Eyeshadow Palette</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://plus.unsplash.com/premium_photo-1677526496590-4baf2d68225b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzd8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Matte Naked 10 Colors Eyeshadow Palette</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://images.unsplash.com/photo-1631214524115-9942bf927d4a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzV8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Ashley Piszek">Ashley Piszek</h3>
+                    <p class="Ashley Piszek">$15.00</p>
+                </div>
+                <div class="collection-item">
+                    <img src="https://images.unsplash.com/photo-1627260125287-e1124c7a5ecc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjN8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Lukas Suntos</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://images.unsplash.com/photo-1571781926291-c477ebfd024b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDR8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Curology</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://images.unsplash.com/photo-1511923199659-1c16881689de?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjh8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Matte Naked 10 Colors Eyeshadow Palette</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://images.unsplash.com/photo-1631214524042-6177152a3980?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzZ8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Matte Naked 10 Colors Eyeshadow Palette</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fG1ha2V1cCUyMHByb2R1Y3RzfGVufDB8fDB8fHww" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Matte Naked 10 Colors Eyeshadow Palette</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$10.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
+                <div class="collection-item">
+                    <img src="https://media.istockphoto.com/id/839214700/photo/touching-with-softness.webp?a=1&b=1&s=612x612&w=0&k=20&c=ElxvXzaQ8LcdsQaqVuRT0R02_h7SLsaNrxKrVPG-wdc=" alt="Product 2" class="collection-image">
+                    <Matte class="Matte Naked 10 Colors Eyeshadow Palette">Matte Naked 10 Colors Eyeshadow Palette</h3>
+                    <p class="Matte Naked 10 Colors Eyeshadow Palette">$80.00</p>
+                    <a href="#" class="view-details">View Details</a>
+                </div>
 
             </div>
         </div>
