--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Makeup Product Landing Page</title>
+    <title>Shifa Beauty</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="navbar">
             <div class="logo">
-                <a href="#">Shifa Beauty</a>
+                <a href="index.html">Shifa Beauty</a>
             </div>
             <nav class="nav">
                 <ul>
                     <li><i class="fa-solid fa-house"></i><a href="about.html">Home</a></li>
                     <li><i class="fa-brands fa-servicestack"></i><a href="services.html">Services</a></li>
-                    <li><i class="fa-solid fa-address-card"></i><a href="about.html">About Us</a></li>
+                    <li><i class="fa-solid fa-address-card"></i><a href="collection.html">Collection</a></li>
                     <li><i class="fa-solid fa-blog"></i><a href="blog.html">Blog</a></li>
                     <li><i class="fa-solid fa-address-book"></i><a href="contact us.html">Contact Us</a></li>
                 </ul>
