--- a/services.html
+++ b/services.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services Section</title>
+    <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
+    <title>Shifa Beauty</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+     <header class="header">
+        <div class="navbar">
+            <div class="logo">
+                <a href="index.html">Shifa Beauty</a>
+            </div>
+            <nav class="nav">
+                <ul>
+                    <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+                    <li><i class="fa-brands fa-servicestack"></i><a href="services.html">Services</a></li>
+                    <li><i class="fa-solid fa-address-card"></i><a href="collection.html">Collection</a></li>
+                    <li><i class="fa-solid fa-blog"></i><a href="blog.html">Blog</a></li>
+                    <li><i class="fa-solid fa-address-book"></i><a href="contact us.html">Contact Us</a></li>
+                </ul>
+            </nav>
+            <div class="header-right">
+                <a href="signup.html" class="cta-button">Sign Up</a>
+            </div>
+        </div>
+    </header>
+
+
     <section class="services">
         <div class="container">
             <h2 class="services-title">Our Services</h2>
@@ -23,28 +46,13 @@
                     <p class="service-description">Achieve the perfect style for any event with our expert hairstylists.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon"><img src="image/Facials & Skincare.jpeg"></div>
-                    <h3 class="service-name">Facials & Skincare</h3>
-                    <p class="service-description">Enjoy rejuvenating facials and skincare treatments customized for your skin type.</p>
-                </div>
-                <div class="Nail">
                     <div class="Nail"><img src="image/Nail.jpeg"></div>
                     <h3 class="Nail">Nail Services</h3>
                     <p class="service-description">Get beautiful nails with our range of manicure and pedicure services.</p>
                 </div>
-                <div class="Nail">
-                    <div class="Glow goals"><img src="image/Glow goals.jpeg"></div>
-                    <h3 class="Glow goals">Glow goals</h3>
-                    <p class="service-description">When a person creates an original work, fixed in a tangible medium, he or she automatically owns copyright to the work.</p>
-                </div>
-                <div class="face-wash-massage">
-                    <div class="face-wash-massage"><img src="image/face-wash-massage.jpg"></div>
-                    <h3 class="face-wash-massage">face-wash-massage</h3>
-                    <p class="service-description">All that cleansing, facial massage, and steaming can feel really heavenly</p>
-                </div>
-             
                
             </div>
+
 
         </div>
     </section>
