--- a/contact us.html
+++ b/contact us.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
+
+    <title>Shifa Beauty</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,20 +27,20 @@
                     <p>+1 (800) 123-4567</p>
                 </div>
             </div>
-            <form class="contact-form">
+            <form class="contact-form" action="contact.php" method="post" >
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" placeholder="Enter your name" name="name" required >
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" placeholder="Enter your email" name="email" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
+                    <textarea id="message" name="message" rows="5" placeholder="Additional Message" required></textarea>
                 </div>
-                <button type="submit" class="submit-button">Send Message</button>
+                <button type="submit" class="submit-button" id="send" name="send">Send Message</button>
             </form>
         </div>
     </section>
