--- a/blog.html
+++ b/blog.html
@@ -16,11 +16,11 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa-brands fa-servicestack"></i><a href="services.html">Services</a></li>
-                    <li><i class="fa-solid fa-address-card"></i><a href="collection.html">Collection</a></li>
-                    <li><i class="fa-solid fa-blog"></i><a href="blog.html">Blog</a></li>
-                    <li><i class="fa-solid fa-address-book"></i><a href="contact us.html">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="collection.html">Collection</a></li>
+                    <li><a href="blog.html" class="active">Blog</a></li>
+                    <li></i><a href="contact us.html">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="header-right">
