--- a/contact us.html
+++ b/contact us.html
@@ -21,7 +21,7 @@
                     <li><a href="services.html">Services</a></li>
                     <li><a href="collection.html">Collection</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact us.html">Contact Us</a></li>
+                    <li><a href="contact us.html" class="active">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="header-right">
