--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><a href="about.html">Home</a></li>
+                    <li><a href="about.html" class="active">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="collection.html">Collection</a></li>
                     <li><a href="blog.html">Blog</a></li>
