--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
     <title>Shifa Beauty</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: #121212;">
 
      <header class="header">
         <div class="navbar">
